--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "js_pamoka",
+  "name": "43-grupe-js-intro",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "strings": "nodemon ./js/02-strings.js",
+      "numbers": "nodemon ./js/01-numbers.js",
+      "dev": "nodemon",
+      "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "dead": "^0.0.2",
-    "nodemon": "^2.0.22"
+      "nodemon": "^2.0.22"
   }
 }
